Bug 1839425: Use AVSampleBufferDisplayLayer for windowed video. r=mstange

Prior to this patch, windowed video was presented in
a AVSampleBufferDisplayLayer only when it was detected to be HDR or DRM
video. This patch allows the use of that specialized video layer for
windowed video as long as the gfx.core-animation.specialize-video pref
is set. This *might* slightly increase the power consumption of windowed
video, though likely not enough to affect user experience.

Differential Revision: https://phabricator.services.mozilla.com/D199286