gfx/layers/NativeLayerCA.h
@@ -149,8 +149,7 @@ class NativeLayerRootCA : public NativeLayerRoot {
     explicit Representation(CALayer* aRootCALayer);
     ~Representation();
     void Commit(WhichRepresentation aRepresentation,
-                const nsTArray<RefPtr<NativeLayerCA>>& aSublayers,
-                bool aWindowIsFullscreen);
+                const nsTArray<RefPtr<NativeLayerCA>>& aSublayers);
     CALayer* mRootCALayer = nullptr;  // strong
     bool mMutatedLayerStructure = false;
   };
@@ -260,8 +259,6 @@ class NativeLayerCA : public NativeLayer {
   void DumpLayer(std::ostream& aOutputStream);
 
   void AttachExternalImage(wr::RenderTextureHost* aExternalImage) override;
-
-  void SetRootWindowIsFullscreen(bool aFullscreen);
 
  protected:
   friend class NativeLayerRootCA;
